Create header and hero

--- a/index.html
+++ b/index.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Denis Novik</title>
+    <link rel="stylesheet" href="styles/normalyze.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <title>Portfolio</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="container header-container">
+            <ul class="header-list list-reset">
+                <li class="header-list__item"><a class="header-list__link header-list__link--active link-reset" href="#">Home</a></li>
+                <li class="header-list__item"><a class="header-list__link link-reset" href="#">About me</a></li>
+                <li class="header-list__item"><a class="header-list__link link-reset" href="#">Skills</a></li>
+                <li class="header-list__item"><a class="header-list__link link-reset" href="#">Portfolio</a></li>
+                <li class="header-list__item"><a class="header-list__link link-reset" href="#">Contacts</a></li>
+            </ul>
+        </div>
+    </header>
+    <main class="main">
+        <section class="hero">
+            <div class="container">
+                <div class="hero-wrapper">
+                    <div class="hero-name">Denis <br> Novik</div>
+                    <div class="hero-job">UX&nbsp;| UI&nbsp;designer <br> 24&nbsp;years old, Minsk</div>
+                    <div class="hero-lang"><a href="#" class="ru link-reset">RU&nbsp;</a><span style="color: #070707">|</span> <a href="#" class="eng link-reset active-lang">ENG</a></div>
+                </div>
+                <div class="hero-img"></div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
