Add about-me section

--- a/index.html
+++ b/index.html
@@ -24,11 +24,21 @@
         <section class="hero">
             <div class="container">
                 <div class="hero-wrapper">
-                    <div class="hero-name">Denis <br> Novik</div>
+                    <h1 class="hero-name">Denis <br> Novik</h1>
                     <div class="hero-job">UX&nbsp;| UI&nbsp;designer <br> 24&nbsp;years old, Minsk</div>
                     <div class="hero-lang"><a href="#" class="ru link-reset">RU&nbsp;</a><span style="color: #070707">|</span> <a href="#" class="eng link-reset active-lang">ENG</a></div>
                 </div>
-                <div class="hero-img"></div>
+                <div class="hero-img bg-img"></div>
+            </div>
+        </section>
+        <section class="about-me">
+            <div class="container">
+                <div class="title">About me</div>
+                <div class="about-me__text">
+                    <p class="about-me__text-item">Hi, I&rsquo;m Denis&nbsp;&mdash; UX/UI designer from Minsk.<br> I&rsquo;m interested in&nbsp;design and everything connected with&nbsp;it.</p>
+                    <p class="about-me__text-item">I&rsquo;m studying at&nbsp;courses &laquo;Web and mobile design<br> interfaces&raquo; in&nbsp;IT-Academy.</p>
+                    <p class="about-me__text-item">Ready to&nbsp;implement excellent projects<br> with wonderful people.</p>
+                </div>
             </div>
         </section>
     </main>
