Add skills section

--- a/index.html
+++ b/index.html
@@ -33,11 +33,63 @@
         </section>
         <section class="about-me">
             <div class="container">
-                <div class="title">About me</div>
+                <div class="title about-me-title">About me</div>
                 <div class="about-me__text">
                     <p class="about-me__text-item">Hi, I&rsquo;m Denis&nbsp;&mdash; UX/UI designer from Minsk.<br> I&rsquo;m interested in&nbsp;design and everything connected with&nbsp;it.</p>
                     <p class="about-me__text-item">I&rsquo;m studying at&nbsp;courses &laquo;Web and mobile design<br> interfaces&raquo; in&nbsp;IT-Academy.</p>
                     <p class="about-me__text-item">Ready to&nbsp;implement excellent projects<br> with wonderful people.</p>
+                </div>
+            </div>
+        </section>
+        <section class="skills">
+            <div class="container">
+                <div class="title skills-title">Skills</div>
+                <p class="skills-text">I&nbsp;work in&nbsp;such programs&nbsp;as</p>
+                <div class="skills__wrapper">
+                    <div class="skills__item">
+                        <div class="skills__item-img"><img src="images/skills/ps.svg" alt="Photoshop"></div>
+                        <div class="skills__item-title">Adobe<br> Photoshop</div>
+                        <div class="skiils__item-stars__inner">
+                            <div class="star-item"><img src="images/skills/active-star.png" alt=""></div>
+                            <div class="star-item"><img src="images/skills/active-star.png" alt=""></div>
+                            <div class="star-item"><img src="images/skills/active-star.png" alt=""></div>
+                            <div class="star-item"><img src="images/skills/active-star.png" alt=""></div>
+                            <div class="star-item"><img src="images/skills/un-active-star.png" alt=""></div>
+                        </div>
+                    </div>
+                    <div class="skills__item">
+                        <div class="skills__item-img"><img src="images/skills/ai.svg" alt="Adobe illustrator"></div>
+                        <div class="skills__item-title">Adobe<br> Illustrator</div>
+                        <div class="skiils__item-stars__inner">
+                            <div class="star-item"><img src="images/skills/active-star.png" alt=""></div>
+                            <div class="star-item"><img src="images/skills/active-star.png" alt=""></div>
+                            <div class="star-item"><img src="images/skills/active-star.png" alt=""></div>
+                            <div class="star-item"><img src="images/skills/un-active-star.png" alt=""></div>
+                            <div class="star-item"><img src="images/skills/un-active-star.png" alt=""></div>
+                        </div>
+                    </div>
+                    <div class="skills__item">
+                        <div class="skills__item-img"><img src="images/skills/ae.svg" alt="Adobe after effects"></div>
+                        <div class="skills__item-title">Adobe<br> After Effects</div>
+                        <div class="skiils__item-stars__inner">
+                            <div class="star-item"><img src="images/skills/active-star.png" alt=""></div>
+                            <div class="star-item"><img src="images/skills/active-star.png" alt=""></div>
+                            <div class="star-item"><img src="images/skills/active-star.png" alt=""></div>
+                            <div class="star-item"><img src="images/skills/active-star.png" alt=""></div>
+                            <div class="star-item"><img src="images/skills/un-active-star.png" alt=""></div>
+                        </div>
+                    </div>
+                    <div class="skills__item">
+                        <div class="skills__item-img"><img src="images/skills/figma.svg" alt="Figma"></div>
+                        <div class="skills__item-title">Figma</div>
+                        <div class="skiils__item-stars__inner">
+                            <div class="star-item"><img src="images/skills/active-star.png" alt=""></div>
+                            <div class="star-item"><img src="images/skills/active-star.png" alt=""></div>
+                            <div class="star-item"><img src="images/skills/active-star.png" alt=""></div>
+                            <div class="star-item"><img src="images/skills/active-star.png" alt=""></div>
+                            <div class="star-item"><img src="images/skills/un-active-star.png" alt=""></div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
