ready desktop version

--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
 </head>
 <body>
     <header class="header">
-        <div class="container header-container">
-            <ul class="header-list list-reset">
-                <li class="header-list__item"><a class="header-list__link header-list__link--active link-reset" href="#">Home</a></li>
-                <li class="header-list__item"><a class="header-list__link link-reset" href="#">About me</a></li>
-                <li class="header-list__item"><a class="header-list__link link-reset" href="#">Skills</a></li>
-                <li class="header-list__item"><a class="header-list__link link-reset" href="#">Portfolio</a></li>
-                <li class="header-list__item"><a class="header-list__link link-reset" href="#">Contacts</a></li>
-            </ul>
+        <div class="container">
+            <div class="header-container">
+                <ul class="header-list list-reset">
+                    <li class="header-list__item"><a class="header-list__link header-list__link--active link-reset" href="#">Home</a></li>
+                    <li class="header-list__item"><a class="header-list__link link-reset" href="#">About me</a></li>
+                    <li class="header-list__item"><a class="header-list__link link-reset" href="#">Skills</a></li>
+                    <li class="header-list__item"><a class="header-list__link link-reset" href="#">Portfolio</a></li>
+                    <li class="header-list__item"><a class="header-list__link link-reset" href="#">Contacts</a></li>
+                </ul>
+            </div>
         </div>
     </header>
     <main class="main">
@@ -46,53 +48,90 @@
                 <div class="title skills-title">Skills</div>
                 <p class="skills-text">I&nbsp;work in&nbsp;such programs&nbsp;as</p>
                 <div class="skills__wrapper">
-                    <div class="skills__item">
-                        <div class="skills__item-img"><img src="images/skills/ps.svg" alt="Photoshop"></div>
-                        <div class="skills__item-title">Adobe<br> Photoshop</div>
-                        <div class="skiils__item-stars__inner">
-                            <div class="star-item"><img src="images/skills/active-star.png" alt=""></div>
-                            <div class="star-item"><img src="images/skills/active-star.png" alt=""></div>
-                            <div class="star-item"><img src="images/skills/active-star.png" alt=""></div>
-                            <div class="star-item"><img src="images/skills/active-star.png" alt=""></div>
-                            <div class="star-item"><img src="images/skills/un-active-star.png" alt=""></div>
+                    <div class="skills-first__wrapper">
+                        <div class="skills__item">
+                            <div class="skills__item-img"><img src="images/skills/ps.svg" alt="Photoshop"></div>
+                            <div class="skills__item-title">Adobe<br> Photoshop</div>
+                            <div class="skiils__item-stars__inner">
+                                <div class="star-item"><img src="images/skills/active-star.svg" alt=""></div>
+                                <div class="star-item"><img src="images/skills/active-star.svg" alt=""></div>
+                                <div class="star-item"><img src="images/skills/active-star.svg" alt=""></div>
+                                <div class="star-item"><img src="images/skills/active-star.svg" alt=""></div>
+                                <div class="star-item"><img src="images/skills/un-active-star.svg" alt=""></div>
+                            </div>
+                        </div>
+                        <div class="skills__item">
+                            <div class="skills__item-img"><img src="images/skills/ai.svg" alt="Adobe illustrator"></div>
+                            <div class="skills__item-title">Adobe<br> Illustrator</div>
+                            <div class="skiils__item-stars__inner">
+                                <div class="star-item"><img src="images/skills/active-star.svg" alt=""></div>
+                                <div class="star-item"><img src="images/skills/active-star.svg" alt=""></div>
+                                <div class="star-item"><img src="images/skills/active-star.svg" alt=""></div>
+                                <div class="star-item"><img src="images/skills/un-active-star.svg" alt=""></div>
+                                <div class="star-item"><img src="images/skills/un-active-star.svg" alt=""></div>
+                            </div>
                         </div>
                     </div>
-                    <div class="skills__item">
-                        <div class="skills__item-img"><img src="images/skills/ai.svg" alt="Adobe illustrator"></div>
-                        <div class="skills__item-title">Adobe<br> Illustrator</div>
-                        <div class="skiils__item-stars__inner">
-                            <div class="star-item"><img src="images/skills/active-star.png" alt=""></div>
-                            <div class="star-item"><img src="images/skills/active-star.png" alt=""></div>
-                            <div class="star-item"><img src="images/skills/active-star.png" alt=""></div>
-                            <div class="star-item"><img src="images/skills/un-active-star.png" alt=""></div>
-                            <div class="star-item"><img src="images/skills/un-active-star.png" alt=""></div>
+                    <div class="skills-second__wrapper">
+                        <div class="skills__item">
+                            <div class="skills__item-img"><img src="images/skills/ae.svg" alt="Adobe after effects"></div>
+                            <div class="skills__item-title">Adobe<br> After Effects</div>
+                            <div class="skiils__item-stars__inner">
+                                <div class="star-item"><img src="images/skills/active-star.svg" alt=""></div>
+                                <div class="star-item"><img src="images/skills/active-star.svg" alt=""></div>
+                                <div class="star-item"><img src="images/skills/active-star.svg" alt=""></div>
+                                <div class="star-item"><img src="images/skills/active-star.svg" alt=""></div>
+                                <div class="star-item"><img src="images/skills/un-active-star.svg" alt=""></div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="skills__item">
-                        <div class="skills__item-img"><img src="images/skills/ae.svg" alt="Adobe after effects"></div>
-                        <div class="skills__item-title">Adobe<br> After Effects</div>
-                        <div class="skiils__item-stars__inner">
-                            <div class="star-item"><img src="images/skills/active-star.png" alt=""></div>
-                            <div class="star-item"><img src="images/skills/active-star.png" alt=""></div>
-                            <div class="star-item"><img src="images/skills/active-star.png" alt=""></div>
-                            <div class="star-item"><img src="images/skills/active-star.png" alt=""></div>
-                            <div class="star-item"><img src="images/skills/un-active-star.png" alt=""></div>
-                        </div>
-                    </div>
-                    <div class="skills__item">
-                        <div class="skills__item-img"><img src="images/skills/figma.svg" alt="Figma"></div>
-                        <div class="skills__item-title">Figma</div>
-                        <div class="skiils__item-stars__inner">
-                            <div class="star-item"><img src="images/skills/active-star.png" alt=""></div>
-                            <div class="star-item"><img src="images/skills/active-star.png" alt=""></div>
-                            <div class="star-item"><img src="images/skills/active-star.png" alt=""></div>
-                            <div class="star-item"><img src="images/skills/active-star.png" alt=""></div>
-                            <div class="star-item"><img src="images/skills/un-active-star.png" alt=""></div>
+                        <div class="skills__item">
+                            <div class="skills__item-img"><img src="images/skills/figma.svg" alt="Figma"></div>
+                            <div class="skills__item-title">Figma</div>
+                            <div class="skiils__item-stars__inner">
+                                <div class="star-item"><img src="images/skills/active-star.svg" alt=""></div>
+                                <div class="star-item"><img src="images/skills/active-star.svg" alt=""></div>
+                                <div class="star-item"><img src="images/skills/active-star.svg" alt=""></div>
+                                <div class="star-item"><img src="images/skills/active-star.svg" alt=""></div>
+                                <div class="star-item"><img src="images/skills/un-active-star.svg" alt=""></div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+        <section class="portfolio">
+            <div class="container">
+                <div class="title portfolio-title">Portfolio</div>
+                <div class="portfolio__item">
+                    <div class="porfolio-img-item bg-img"><img src="images/portfolio/1.jpg" alt="" class="porfolio-img"></div>
+                    <a href="#" class="portfolio__item-title link-reset" target="_blank">Online fashion store&nbsp;&mdash; Homepage</a>
+                </div>
+                <div class="portfolio__item">
+                    <div class="porfolio-img-item bg-img"><img src="images/portfolio/2.jpg" alt="" class="porfolio-img"></div>
+                    <a href="#" class="portfolio__item-title link-reset" target="_blank">Reebok Store&nbsp;&mdash; Concept</a>
+                </div>
+                <div class="portfolio__item">
+                    <div class="porfolio-img-item bg-img"><img src="images/portfolio/3.jpg" alt="" class="porfolio-img"></div>
+                    <a href="#" class="portfolio__item-title link-reset" target="_blank">Braun Landing Page&nbsp;&mdash; Concept</a>
+                </div>
+            </div>
+        </section>
     </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="title contacts-title">Contacts</div>
+            <div class="contacts-text">Want to&nbsp;know more or&nbsp;just chat? <br> You are welcome!</div>
+            <form action="" class="form">
+                <button class="footer-btn">Send message</button>
+            </form>
+            <ul class="social-link__inner list-reset">
+                <li class="social-link__item"><a href="#" class="social-link" target="_blank"><img src="images/social/linkedIn.svg" alt="linkedIn"></a></li>
+                <li class="social-link__item"><a href="#" class="social-link" target="_blank"><img src="images/social/instagram.svg" alt="instagram"></a></li>
+                <li class="social-link__item"><a href="#" class="social-link" target="_blank"><img src="images/social/behance.svg" alt="behance"></a></li>
+                <li class="social-link__item"><a href="#" class="social-link" target="_blank"><img src="images/social/dribble.svg" alt="dribble"></a></li>
+            </ul>
+            <div class="social-text">Like me on <br> LinkedIn, Instagram, Behance, Dribble</div>
+        </div>
+    </footer>
 </body>
 </html>
