Added smooth scroll

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             <div class="header-container">
                 <ul class="header-list list-reset">
                     <li class="header-list__item"><a class="header-list__link header-list__link--active link-reset" href="#">Home</a></li>
-                    <li class="header-list__item"><a class="header-list__link link-reset" href="#">About me</a></li>
-                    <li class="header-list__item"><a class="header-list__link link-reset" href="#">Skills</a></li>
-                    <li class="header-list__item"><a class="header-list__link link-reset" href="#">Portfolio</a></li>
-                    <li class="header-list__item"><a class="header-list__link link-reset" href="#">Contacts</a></li>
+                    <li class="header-list__item"><a class="header-list__link link-reset" href="#about-me">About me</a></li>
+                    <li class="header-list__item"><a class="header-list__link link-reset" href="#skills">Skills</a></li>
+                    <li class="header-list__item"><a class="header-list__link link-reset" href="#portfolio">Portfolio</a></li>
+                    <li class="header-list__item"><a class="header-list__link link-reset" href="#contacts">Contacts</a></li>
                 </ul>
             </div>
         </div>
@@ -33,7 +33,7 @@
                 <div class="hero-img bg-img"></div>
             </div>
         </section>
-        <section class="about-me">
+        <section class="about-me" id="about-me">
             <div class="container">
                 <div class="title about-me-title">About me</div>
                 <div class="about-me__text">
@@ -43,7 +43,7 @@
                 </div>
             </div>
         </section>
-        <section class="skills">
+        <section class="skills" id="skills">
             <div class="container">
                 <div class="title skills-title">Skills</div>
                 <p class="skills-text">I&nbsp;work in&nbsp;such programs&nbsp;as</p>
@@ -99,7 +99,7 @@
                 </div>
             </div>
         </section>
-        <section class="portfolio">
+        <section class="portfolio" id="portfolio">
             <div class="container">
                 <div class="title portfolio-title">Portfolio</div>
                 <div class="portfolio__item">
@@ -117,7 +117,7 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
+    <footer class="footer" id="contacts">
         <div class="container">
             <div class="title contacts-title">Contacts</div>
             <div class="contacts-text">Want to&nbsp;know more or&nbsp;just chat? <br> You are welcome!</div>
@@ -133,5 +133,6 @@
             <div class="social-text">Like me on <br> LinkedIn, Instagram, Behance, Dribble</div>
         </div>
     </footer>
+    <script src="scripts/scripts.js"></script>
 </body>
 </html>
